FEATURE-74: Improved Documentation (#82)
* improved blog layout

* Revert "improved blog layout"

This reverts commit b23e88b6

* modified adoc

* updated readme

* fixed updates

* updated guides intro

* created title for first guide

* Updated Api Convention Documentation

* documented authentication and domain management api

* added authorities to api doc for domain and authentication

* documentated user management

* completed user management service documentation

* completed registration documentation

* created identity module

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,4 +1,4 @@
-= Mmadu
+= A Multi-Tenant User and Identity Management Provider
 :showtitle:
 :page-title: Mmadu Service
 :page-description: User Management Service
@@ -7,46 +7,70 @@
 :imagesrootdir: {page-root}/images
 :version: master
 
-== Introduction
+== Overview
 
-Mmadu is a set of tools and services that helps developers manage their application users.
+Mmadu (pronounced um-a-du) is derived from an Igbo word meaning people.
+
+Have you ever found yourself in a state of deja-vu when ever you write user management logic? Mmadu provides
+a set of tools that ensures that you never have to repeat user management logic. It helps to manage users, takes
+care of registration work flows and exposes APIs for authentication.
+
+With Mmadu, you can have a dedicated system for managing users across all your applications.
+Mmadu is a set of tools and services that helps developers manage their application users. Applications are constantly
+being built on mobile, web and other devices and with these bring their own security challenges in authentication and
+authorization.
+
+Different standards are being developed to handle user management, authorization and authentication like Oauth 2.0,
+Open ID and others. Mmadu aims to provide all the tools needed developers to implement these standards in their applications.
+
+== Vision
+
+To help developers (*of all walks of life*) eliminate user-management coding in applications forever.
+
+== Current Features
+
+. Multi-tenancy using Domains
+. User Management
+. Role and Authority Management
+. Group Management
+. Authentication
+. Dynamic User Registration Forms
+. Oauth 2.0
+. Jwt Token Security
+
+== Project Road Map
+
+We aim to provide an array of services and libraries to enable developers pick and choose to implement
+their desired management flows.
+
+Below are some of the features in the pipeline:
+
+. User Account flows: Forgot Password, Reset Password e.t.c
+. Oauth 2.0 https://tools.ietf.org/html/rfc6749#section-1.3.2[Implicit] and
+https://tools.ietf.org/html/rfc6749#section-1.3.3[Resource owner Password Credentials] grant types
+(currently only Authorization Code, Client Credentials and Refresh Token are supported)
+. Oauth 2.0 https://tools.ietf.org/html/rfc7636[Proof Key for Code Exchange]
+. Oauth 2.0 https://tools.ietf.org/html/rfc8628#section-3.4[Device Code Grant Type]
+. Oauth 2.0 https://tools.ietf.org/html/rfc8414[Authorization Server Metadata]
+. Oauth 2.0 https://tools.ietf.org/html/rfc7591[Dynamic Client Registration]
+. Oauth 2.0 https://tools.ietf.org/html/rfc7592[Dynamic Client Registration Management]
+. https://https://openid.net/connect/[Open ID Connect]
+. https://docs.kantarainitiative.org/uma/wg/rec-oauth-uma-grant-2.0.html[UMA 2.0]
+. ... and many more as they come
+
+== Current Services
+
+Mmmadu is made up of the following standalone services:
+
+. Mmadu User Service - This handles domain, user, roles, authorities and management.
+. Mmadu Registration Service - This handles registration and other user flows
+. Mmadu Identity Service - An identity provider, for exposing Oauth 2.0 endpoints
 
 == Getting Started
 
-Mmadu can be easily started with docker compose.
+Click link:/guides[here] to get started
 
-=== Steps to Run Mmadu User Service
+== Contributing to Mmadu
 
-To run Mmadu User service, take the following steps:
-
-. Create a folder (we will use mmadu as the created folder)
-+
-[source,sh]
-----
-mkdir mmadu && cd mmadu
-----
-. Download the https://raw.githubusercontent.com/geraldoyudo/mmadu/{version}/docker/docker-compose.yml[docker compose file]
-+
-[source,sh]
-[subs="attributes"]
-----
-wget https://raw.githubusercontent.com/geraldoyudo/mmadu/{version}/docker/docker-compose.yml
-----
-. Download the https://raw.githubusercontent.com/geraldoyudo/mmadu/{version}/docker/.env[default environment file]
-+
-[source,sh]
-[subs="attributes"]
-----
-wget https://raw.githubusercontent.com/geraldoyudo/mmadu/{version}/docker/.env
-----
-. Make the necessary modifications to suite your configuration (you can use it as is)
-. Start the services
-+
-[source,sh]
-----
-docker-compose up
-----
-
-== User Guide
-
-Check https://geraldoyudo.github.io/mmadu/apis/mmadu-user-guide[here] for the user guide
+If you want to contribute to eliminate user management coding forever, mailto:mmadu.auth@gmail.com[send
+a mail to Mmadu]
